# espresso-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pr-gate.yml  release.yml
src/espresso_mcp/: server.py  test_basic.py
tests/: test_server.py
