[project]
name = "espresso-mcp"
version = "0.1.4"
description = "An MCP Server for the Espresso Android Test Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.1", "mcp[cli]>=1.7.1", "pillow>=11.2.1"]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.8"]


[project.scripts]
espresso-mcp = "espresso_mcp.server:main"

# TODO: Check for uv build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
  "F841", # Unused variable
  "F401", # Unused imports
]
